<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="question_ocean">The Pacific Ocean larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas</string>
    <string name="question_asia">Lake Baikal is the world\' oldest and deepest freshwater lake.</string>
    <string name="right">TRUE</string>
    <string name="wrong">FALSE</string>
    <string name="correct">Correct!</string>
    <string name="incorrect">Incorrect!</string>
    <string name="next">NEXT></string>
    <string name="prev"><![CDATA[<PREV]]></string>
</resources>

